--- a/views/index.mustache
+++ b/views/index.mustache
@@ -11,7 +11,10 @@
         <li class="boxes">
           <a href="/user/{{username}}">
             <img src="{{avatar}}">
-            <span class="name">{{name}}</span>
+            <span class="name">{{name}}</span><br><br>
+            {{^job}}
+            <span class="job">Availible for hire</span>
+            {{/job}}
             <span class="position">{{job}} {{company}}</span>
           </a>
         </li>
