--- a/views/index.mustache
+++ b/views/index.mustache
@@ -11,11 +11,11 @@
         <li class="boxes">
           <a href="/user/{{username}}">
             <img src="{{avatar}}">
-            <span class="name">{{name}}</span><br><br>
+            <span class="name">{{name}}</span><br>
             {{^job}}
             <span class="job">Availible for hire</span>
             {{/job}}
-            <span class="position">{{job}} {{company}}</span>
+            <span class="position">{{job}}<br>{{company}}</span>
           </a>
         </li>
 
